fix(widget): improve dark mode select options

--- a/app/javascript/widget/assets/scss/woot.scss
+++ b/app/javascript/widget/assets/scss/woot.scss
@@ -101,6 +101,19 @@ select:not(.reset-base) {
   background-repeat: no-repeat;
   background-size: 9px 6px;
   font-family: inherit;
+  @apply [color-scheme:light];
+
+  option {
+    @apply bg-n-background text-n-slate-12;
+  }
+}
+
+.dark select:not(.reset-base) {
+  @apply [color-scheme:dark];
+
+  option {
+    @apply bg-n-solid-2 text-n-slate-12;
+  }
 }
 
 p code {
